# ModLoader64-InputRumbleReport

./: .gitignore  CMakeLists.txt  make-pkg.bat
cmake/: Import_node.cmake  Import_vcpkg.cmake  Init_project.cmake
helper/: CMakeLists.txt
helper/src/: main.cpp  sdl2_loader.cpp
mupen64plus-input-sdl/: CMakeLists.txt
mupen64plus-input-sdl/src/: osal_dynamiclib_win32.c  plugin.c  sdl2_loader.cpp
plugin/: InputRumbleReport.js  ShardOfAgony.js  package.json
